--- a/porcupine3/config.yaml
+++ b/porcupine3/config.yaml
@@ -1,16 +1,18 @@
 ---
-version: 3.0.0
-slug: porcupine3
-name: Porcupine Wake Word (v3)
-description: Wake word detection using the Wyoming protocol with Porcupine v3
-url: https://github.com/vash2695/wyoming-porcupine
+name: "Porcupine Wake Word (v3)"
+version: "3.0.0"
+slug: "porcupine3"
+description: "Wake word detection using the Wyoming protocol with Porcupine v3"
+url: "https://github.com/vash2695/wyoming-porcupine"
 arch:
   - amd64
   - aarch64
   - armv7
+startup: application
+boot: auto
 init: false
-discovery:
-  - wyoming
+ports:
+  "10400/tcp": 10400
 options:
   access_key: ""
   sensitivity: 0.5
@@ -18,9 +20,9 @@ options:
   debug_logging: false
 schema:
   access_key: str
-  sensitivity: float(0,1)
-  language: list(en|es|fr|de)
+  sensitivity: "float(0,1)"
+  language: "list(en|es|fr|de)"
   debug_logging: bool
-ports:
-  "10400/tcp": null
+discovery:
+  - wyoming
 homeassistant: 2023.9.0 
